--- a/src/components/pages/TiempoDeEspera.css
+++ b/src/components/pages/TiempoDeEspera.css
@@ -59,6 +59,7 @@
 }
 
 .info-item {
+  font-family: 'Covesbold';
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -73,7 +74,7 @@
 }
 
 .info-item p {
-  font-size: 16px;
+  font-size: 22px;
   color: #444;
 }
 
