--- a/src/components/pages/TiempoDeEspera.css
+++ b/src/components/pages/TiempoDeEspera.css
@@ -20,6 +20,8 @@
 
 .highlight {
   color: #000;
+  text-align: center;
+  margin: 0;
 }
 
 .contenedor-estrellas {
@@ -36,12 +38,13 @@
 .service-description {
   max-width: 500px;
 }
-.service-text p {
-  font-family: 'CovesLight';
-  font-size: 25px;
-  color: #666;
-  margin-top: 10px;
+.service-text p,
+.info-item p {
+  font-family: 'CovesLight'; /* o la fuente que prefieras */
+  font-size: 22px;
+  color: #444;
   line-height: 1.5;
+  margin-top: 10px;
 }
 
 .service-image img {
@@ -72,12 +75,6 @@
   width: 150px;
   margin-bottom: 15px;
 }
-
-.info-item p {
-  font-size: 22px;
-  color: #444;
-}
-
 /* Laptop (≤1440px) */
 @media (max-width: 1440px) {
   .service-text h1 {
@@ -97,7 +94,7 @@
   }
 
   .info-item p {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
@@ -142,7 +139,8 @@
     font-size: 36px;
   }
 
-  .service-text p {
+  .service-text p,
+  .info-item p {
     font-size: 18px;
   }
 
@@ -174,8 +172,9 @@
     font-size: 28px;
   }
 
-  .service-text p {
-    font-size: 16px;
+  .service-text p,
+  .info-item p {
+    font-size: 18px;
   }
 
   .service-image img {
@@ -193,9 +192,5 @@
 
   .info-item img {
     width: 100px;
-  }
-
-  .info-item p {
-    font-size: 14px;
   }
 }
